--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
  </figcaption>
   </figure>
 
+  <h2 id="stegosaurus">Stegosaurus</h2>
+  <figure>
+    <img src="images/stegosaurus.jpg" alt="">
+    <figcaption>Due to their distinctive combination of broad, upright plates and tail tipped with spikes, Stegosaurus is one of the most recognizable kinds of dinosaur.
+ </figcaption>
+  </figure>
+
 </main>
 
 </body>
